infrastructure/argo/events/ci-webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: demo-code-pushed-gateway
  labels:
    # gateway controller with instanceId "argo-events" will process this gateway
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
spec:
  replica: 1
  type: webhook
  eventSourceRef:
    name: demo-pushed
  template:
    metadata:
      name: demo-code-pushed-gateway
      labels:
        gateway-name: demo-code-pushed-gateway
    spec:
      containers:
        - name: gateway-client
          image: argoproj/gateway-client:v0.14.0
          imagePullPolicy: Always
          command: ["/bin/gateway-client"]
        - name: webhook-events
          image: argoproj/webhook-gateway:v0.14.0
          imagePullPolicy: Always
          command: ["/bin/webhook-gateway"]
      serviceAccountName: argo-events-sa
  service:
    metadata:
      name: demo-code-pushed-gateway-svc
    spec:
      selector:
        gateway-name: demo-code-pushed-gateway
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer
  subscribers:
    http:
      - "http://webhook-sensor.argo-events.svc:9300/"
